--- a/src/jenkinsfile
+++ b/src/jenkinsfile
@@ -1,13 +1,17 @@
-pipeline{
-  agents any
-  stages{
-    stage ('checkout scm') {
-      git branch:'main', url: 'https://github.com/ammukaleem/Ekart-project'
-}
-stage ('Buid') {
-   sh 'mvn clean package' 
-}
-stage('Static Code Analysis') {
+pipeline {
+  agent any
+  stages {
+    stage('checkout scm') {
+      steps {
+        git branch: 'main', url: 'https://github.com/ammukaleem/Ekart-project'
+      }
+    }
+    stage('Build') {
+      steps {
+        sh 'mvn clean package'
+      }
+    }
+    stage('Static Code Analysis') {
       environment {
         SONAR_URL = "http://192.168.56.11:9000"
       }
@@ -17,21 +21,26 @@ stage('Static Code Analysis') {
         }
       }
     }
-stage ('Docker Build') {
-   sh 'docker build -t ekart:${BUILD_NUMBER} .'
-}
-stage ('Docker Push') {
-   withCredentials([string(credentialsId: 'dockerhub-credentials', variable: 'DOCKERHUB_PASSWORD')]) {
-       sh 'echo $DOCKERHUB_PASSWORD | docker login -u dockaleem --password-stdin'
-       sh 'docker push ekart:${BUILD_NUMBER}'
-   }
-}
-stage ('pull and deploy to k8s cluster') {
-   
-   sh 'kubectl apply -f k8s/deployment.yaml'
-   sh 'kubectl set image deployment/ekart ekart=ekart:${BUILD_NUMBER}'
-   sh 'kubectl rollout status deployment/ekart'
-}
+    stage('Docker Build') {
+      steps {
+        sh 'docker build -t ekart:${BUILD_NUMBER} .'
+      }
+    }
+    stage('Docker Push') {
+      steps {
+        withCredentials([string(credentialsId: 'dockerhub-credentials', variable: 'DOCKERHUB_PASSWORD')]) {
+          sh 'echo $DOCKERHUB_PASSWORD | docker login -u dockaleem --password-stdin'
+          sh 'docker push ekart:${BUILD_NUMBER}'
+        }
+      }
+    }
+    stage('pull and deploy to k8s cluster') {
+      steps {
+        sh 'kubectl apply -f k8s/deployment.yaml'
+        sh 'kubectl set image deployment/ekart ekart=ekart:${BUILD_NUMBER}'
+        sh 'kubectl rollout status deployment/ekart'
+      }
+    }
   }
 }
 
