--- a/src/jenkinsfile
+++ b/src/jenkinsfile
@@ -8,7 +8,8 @@ pipeline {
     }
     stage('Build') {
       steps {
-        sh 'mvn clean package'
+        sh 'mvn clean install -DskipTests'
+
       }
     }
     stage('Static Code Analysis') {
